--- a/css/index.css
+++ b/css/index.css
@@ -51,6 +51,8 @@
       height: 100%;
       text-align: center;
       float: left;
+      padding-top: 10px;
+      margin-left: 30%;
       background: rgba(0, 200, 20, 0.7);
   }
   
@@ -66,7 +68,7 @@
   .portafolio ul li a {
       display: block;
       text-decoration: none;
-      font-size: 2em;
+      font-size: 1.5em;
       color: white;
       text-align: center;
       padding: 11px 5px;
@@ -74,6 +76,74 @@
   }
   
   .portafolio ul li a:hover {
-      border-bottom: 2px solid green;
+      border-bottom: 2px solid white;
+      background: black;
+  }
+  
+  .about {
+      width: 10%;
+      height: 100%;
+      text-align: center;
+      float: left;
+      padding-top: 10px;
+      margin-left: 30%;
+      background: rgba(0, 200, 20, 0.7);
+  }
+  
+  .about ul {
+      list-style: none;
+  }
+  
+  .about ul li {
+      display: inline-block;
+      width: 120px;
+  }
+  
+  .about ul li a {
+      display: block;
+      text-decoration: none;
+      font-size: 1.5em;
+      color: white;
+      text-align: center;
+      padding: 11px 5px;
+      border-bottom: 2px solid grey;
+  }
+  
+  .about ul li a:hover {
+      border-bottom: 2px solid white;
+      background: black;
+  }
+  
+  .contanc {
+      width: 10%;
+      height: 100%;
+      text-align: center;
+      float: left;
+      padding-top: 10px;
+      margin-left: 30%;
+      background: rgba(0, 200, 20, 0.7);
+  }
+  
+  .contanc ul {
+      list-style: none;
+  }
+  
+  .contanc ul li {
+      display: inline-block;
+      width: 120px;
+  }
+  
+  .contanc ul li a {
+      display: block;
+      text-decoration: none;
+      font-size: 1.5em;
+      color: white;
+      text-align: center;
+      padding: 11px 5px;
+      border-bottom: 2px solid grey;
+  }
+  
+  .contanc ul li a:hover {
+      border-bottom: 2px solid white;
       background: black;
   }
