--- a/css/index.css
+++ b/css/index.css
@@ -147,8 +147,20 @@
       background: black;
       border-radius: 4px;
   }
+  /*Header*/
   
   .contenedor-principal {
       width: 100%;
       height: 100vh;
+      background-color: gray;
+  }
+  
+  .img-primary {
+      width: 20%;
+      height: 40%;
+      margin-left: 42%;
+      margin-top: 7%;
+      background: url(../img/one.jpg);
+      background-size: 100% 100%;
+      border-radius: 50%;
   }
