--- a/css/index.css
+++ b/css/index.css
@@ -174,7 +174,15 @@
       margin-top: 2%;
   }
   
-  .seccion {
+  .section h2 {
+      font-size: 3em;
+      color: black;
+      text-align: center;
+      margin-top: -0.0%;
+  }
+  /*Section*/
+  
+  .section {
       width: 100%;
       height: 10%;
       max-width: 1280vh;
@@ -183,7 +191,7 @@
       margin-top: 14.9%;
   }
   
-  .seccion h2 {
+  .section h2 {
       font-size: 3em;
       color: black;
       text-align: center;
@@ -197,7 +205,7 @@
       background-color: gray;
   }
   
-  .seccion-2 {
+  .section-2 {
       width: 100%;
       height: 10%;
       max-width: 1280vh;
@@ -205,7 +213,7 @@
       float: left;
   }
   
-  .seccion-2 h2 {
+  .section-2 h2 {
       font-size: 3em;
       color: black;
       text-align: center;
