--- a/css/index.css
+++ b/css/index.css
@@ -174,6 +174,18 @@
       margin-top: 2%;
   }
   
+  h3 {
+      font-size: 2em;
+      color: white;
+      text-align: center;
+  }
+  
+  .contenedor-principal i {
+      font-size: 2em;
+      margin-top: 2%;
+      margin-left: 48%;
+  }
+  
   .section h2 {
       font-size: 3em;
       color: black;
@@ -188,7 +200,7 @@
       max-width: 1280vh;
       background-color: white;
       float: left;
-      margin-top: 14.9%;
+      margin-top: 10.4%;
   }
   
   .section h2 {
