--- a/css/index.css
+++ b/css/index.css
@@ -42,8 +42,8 @@
       height: 100%;
       float: left;
       text-align: center;
-      padding-top: 15px;
-      font-size: 2em;
+      padding-top: 20px;
+      font-size: 1.8em;
       color: white;
   }
   
@@ -77,7 +77,7 @@
   }
   
   .portafolio ul li a:hover {
-      background: black;
+      background: rgba(111, 112, 111, 1);
       border-radius: 4px;
   }
   
@@ -184,6 +184,7 @@
       font-size: 2em;
       margin-top: 2%;
       margin-left: 48%;
+      color: white;
   }
   
   .section h2 {
