--- a/css/index.css
+++ b/css/index.css
@@ -111,7 +111,7 @@
   }
   
   .about ul li a:hover {
-      background: black;
+      background: rgba(111, 112, 111, 1);
       border-radius: 4px;
   }
   
@@ -145,7 +145,7 @@
   }
   
   .contanc ul li a:hover {
-      background: black;
+      background: rgba(111, 112, 111, 1);
       border-radius: 4px;
   }
   /*Header*/
@@ -153,6 +153,7 @@
   .contenedor-principal {
       width: 100%;
       height: 100vh;
+      float: left;
       background-color: gray;
   }
   
@@ -187,6 +188,11 @@
       color: white;
   }
   
+  .section i {
+      font-size: 2em;
+      color: rgb(0, 0, 0);
+  }
+  
   .section h2 {
       font-size: 3em;
       color: black;
@@ -197,11 +203,11 @@
   
   .section {
       width: 100%;
-      height: 10%;
+      height: 15%;
       max-width: 1280vh;
       background-color: white;
       float: left;
-      margin-top: 10.4%;
+      margin-top: 7.4%;
   }
   
   .section h2 {
@@ -211,11 +217,21 @@
       margin-top: -0.0%;
   }
   
+  .section i {
+      margin-top: 0.1%;
+  }
+  /*Portfolios*/
+  
   .primary {
       width: 100%;
       height: 100%;
       float: left;
-      background-color: gray;
+  }
+  
+  .folders-int {
+      width: 100%;
+      height: 100%;
+      float: left;
   }
   
   .section-2 {
