--- a/css/index.css
+++ b/css/index.css
@@ -221,7 +221,7 @@ h3 {
 }
 
 .section h2 {
-    font-size: 3em;
+    font-size: 2em;
     color: black;
     text-align: center;
     margin-top: -0.0%;
@@ -400,7 +400,7 @@ h3 {
 }
 
 .section-2 h2 {
-    font-size: 3.5em;
+    font-size: 2.5em;
     color: white;
     text-align: center;
     margin-top: -1%;
@@ -419,7 +419,7 @@ h3 {
     width: 65%;
     height: 45%;
     margin-top: 2%;
-    margin-left: 15%;
+    margin-left: 20%;
 }
 
 .cajaizq-text {
@@ -446,9 +446,41 @@ h3 {
     color: white;
 }
 
+.section-2 a {
+    width: 10%;
+    height: 10%;
+    border-radius: 10%;
+    margin-top: 2%;
+    margin-left: 45%;
+}
+
+.section-2 a {
+    display: block;
+    text-decoration: none;
+    font-size: 1em;
+    color: white;
+    text-align: center;
+    padding: 11px 5px;
+    border-bottom: 2px solid white;
+}
+
+.section-2 a:hover {
+    background: rgb(255, 255, 255);
+    color: black;
+    border-radius: 4px;
+}
+
 .second {
     width: 100%;
     height: 100%;
     float: left;
     background-color: gray;
+}
+
+.second h2 {
+    font-size: 2em;
+}
+
+.second i {
+    text-align: center;
 }
