--- a/css/index.css
+++ b/css/index.css
@@ -470,17 +470,54 @@ h3 {
     border-radius: 4px;
 }
 
+
+/*contact me*/
+
 .second {
     width: 100%;
     height: 100%;
     float: left;
-    background-color: gray;
 }
 
 .second h2 {
     font-size: 2em;
+    color: black;
 }
 
 .second i {
     text-align: center;
+    color: black;
+}
+
+
+/*form contect me*/
+
+.formulario input {
+    width: 50%;
+    margin-top: 20px;
+    margin-left: 25%;
+    padding: 10px;
+    font-size: 30px;
+    border-style: none;
+    border-bottom: 2px solid grey;
+}
+
+.formulario button {
+    display: block;
+    text-decoration: none;
+    font-size: 1.2em;
+    width: 9%;
+    margin-top: 6%;
+    margin-left: 25%;
+    color: black;
+    text-align: center;
+    padding: 11px 5px;
+    border-style: none;
+}
+
+.formulario button:hover {
+    background: rgb(39, 8, 124);
+    color: rgb(255, 255, 255);
+    border-radius: 4px;
+    border-bottom: 2px solid rgb(0, 0, 0);
 }
