--- a/css/index.css
+++ b/css/index.css
@@ -521,3 +521,110 @@ h3 {
     border-radius: 4px;
     border-bottom: 2px solid rgb(0, 0, 0);
 }
+
+
+/*date*/
+
+.date {
+    width: 100%;
+    height: 40%;
+    float: left;
+    padding-left: 10px;
+    background: rgb(39, 8, 124);
+}
+
+.location {
+    width: 33.3%;
+    height: 100%;
+    float: left;
+    padding: 5% 5% 5% 5%;
+}
+
+.location h2 {
+    font-size: 2em;
+    color: white;
+    text-align: center;
+}
+
+.location p {
+    font-size: 1.3em;
+    text-align: center;
+    color: white;
+    margin-top: 4%;
+}
+
+.around-the-web {
+    width: 33.3%;
+    height: 100%;
+    float: left;
+    padding: 5% 5% 5% 5%;
+}
+
+.around-the-web h2 {
+    font-size: 2em;
+}
+
+.redes {
+    width: 75%;
+    height: 40%;
+    margin-left: 10%;
+    margin-top: 5%;
+}
+
+.pred {
+    width: 33.3%;
+    height: 100%;
+    float: left;
+}
+
+.pred i {
+    margin-left: 20%;
+    font-size: 3em;
+}
+
+.pred i:hover {
+    background: black;
+    color: grey;
+    border-radius: 50%;
+}
+
+.sred {
+    width: 33.3%;
+    height: 100%;
+    float: left;
+}
+
+.sred i {
+    margin-left: 20%;
+    font-size: 3em;
+}
+
+.sred i:hover {
+    background: black;
+    color: grey;
+    border-radius: 50%;
+}
+
+.tred {
+    width: 33.3%;
+    height: 100%;
+    float: left;
+    text-align: center;
+}
+
+.tred i {
+    margin-left: 20%;
+    font-size: 3em;
+}
+
+.tred i:hover {
+    background: black;
+    color: grey;
+    border-radius: 50%;
+}
+
+.about-freelancer {
+    width: 33.3%;
+    height: 100%;
+    float: left;
+}
